@@ -3,11 +3,11 @@ package in.koreatech.koin.domain.dining.service;
 import java.time.Clock;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import in.koreatech.koin.domain.dining.dto.DiningLikeRequest;
 import in.koreatech.koin.domain.dining.dto.DiningResponse;
 import in.koreatech.koin.domain.dining.exception.DuplicateLikeException;
 import in.koreatech.koin.domain.dining.exception.LikeNotFoundException;
@@ -27,46 +27,45 @@ public class DiningService {
 
     private final Clock clock;
 
-    public List<DiningResponse> getDinings(LocalDate date) {
+    public List<DiningResponse> getDinings(LocalDate date, Integer userId) {
         if (date == null) {
             date = LocalDate.now(clock);
         }
         return diningRepository.findAllByDate(date)
             .stream()
-            .map(DiningResponse::from)
-            .toList();
+            .map(dining -> {
+                boolean isLiked =
+                    (userId != null) && diningLikesRepository.existsByDiningIdAndUserId(dining.getId(), userId);
+                return DiningResponse.from(dining, isLiked);
+            }).collect(Collectors.toList());
     }
 
     @Transactional(readOnly = false)
-    public void likeDining(DiningLikeRequest diningLikeRequest) {
-        if (diningLikesRepository.existsByDiningIdAndUserId(diningLikeRequest.diningId(), diningLikeRequest.userId())) {
-            throw DuplicateLikeException.withDetail(diningLikeRequest.diningId(), diningLikeRequest.userId());
+    public void likeDining(Integer userId, Integer diningId) {
+        if (diningLikesRepository.existsByDiningIdAndUserId(diningId, userId)) {
+            throw DuplicateLikeException.withDetail(diningId, userId);
         }
 
-        Dining dining = diningRepository.getById(diningLikeRequest.diningId());
+        Dining dining = diningRepository.getById(diningId);
         dining.likesDining();
         diningRepository.save(dining);
 
         diningLikesRepository.save(DiningLikes.builder()
-            .diningId(diningLikeRequest.diningId())
-            .userId(diningLikeRequest.userId())
+            .diningId(diningId)
+            .userId(userId)
             .build());
     }
 
     @Transactional(readOnly = false)
-    public void likeDiningCancel(DiningLikeRequest diningLikeRequest) {
-        if (!diningLikesRepository.existsByDiningIdAndUserId(diningLikeRequest.diningId(),
-            diningLikeRequest.userId())) {
-            throw LikeNotFoundException.withDetail(diningLikeRequest.diningId(), diningLikeRequest.userId());
+    public void likeDiningCancel(Integer userId, Integer diningId) {
+        if (!diningLikesRepository.existsByDiningIdAndUserId(diningId, userId)) {
+            throw LikeNotFoundException.withDetail(diningId, userId);
         }
 
-        Dining dining = diningRepository.getById(diningLikeRequest.diningId());
+        Dining dining = diningRepository.getById(diningId);
         dining.likesDiningCancel();
         diningRepository.save(dining);
 
-        diningLikesRepository.deleteByDiningIdAndUserId(
-            diningLikeRequest.diningId(),
-            diningLikeRequest.userId()
-        );
+        diningLikesRepository.deleteByDiningIdAndUserId(diningId, userId);
     }
 }
